改动文案以及添加招聘里的动态日期

--- a/html/aboutUs/index.html
+++ b/html/aboutUs/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE HTML>
-<html lang="zh-CN" >
+<html lang="zh-CN">
 
-<head >
-    <meta charset="UTF-8" >
-    <title >关于我们-走进维正</title >
+<head>
+    <meta charset="UTF-8">
+    <title>关于我们-走进维正</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="apple-mobile-web-app-capable" content="no" />
-    <meta name="format-detection" content="telephone=no" >
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="../../css/style.css" />
-    
+
     <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css" />
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js" ></script >
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js" ></script >
     <![endif]-->
-</head >
+</head>
 
-<body >
-<!--Header -->
-<header id="header" >
-    <h1 id="logo" >
-        <a href="../index.html" >
-            <img src="../../img/logo.png" alt="" >
-            <ins >维正集团</ins >
+<body>
+    <!--Header -->
+    <header id="header">
+        <h1 id="logo">
+            <a href="../index.html">
+                <img src="../../img/logo.png" alt="">
+                <ins>维正集团</ins >
         </a >
     </h1 >
     <nav id="navBar" class="navBar" >
@@ -145,23 +145,33 @@
         </figcaption >
     </figure >
     <p class="text" >
-        截止2016年12月15号，维正知识产权旗下拥有：15家线下知识产权公司、2家律师事务所、1个互联网线上平台、2个微信公众号、1600多名维正人。我们遍布全国13个城市，服务企事业单位超30000多家。
+        截止2017年4月30号，维正知识产权集团体系包括了23家线下知识产权代理公司、2家律师事务所、1个知识产权互联网平台以及3个微信公众号。我们的服务网点涵盖全国21个城市，服务企事业单位超40000多家。
     </p >
     <p class="text" >
-        1600多名维正人=500多名知识产权顾问人员+260多名专利代理人员+230多名商标版权代理人员+180多名政府项目申报人员+60多名客服人员+110多名流程人员+50多名执业律师+50多名资深IT人员+80多名后勤人员+30多名知识产权运营人员。
+        为了专业、高效、便捷得服务客户，维正知识产权集团体系内吸引、培养了近2000名优秀的专业人员，专业团队的主要构成是：600多名知识产权顾问人员、400多名专利代理人员、300多名商标版权代理人员、200多名政府项目申报人员、100多名执业律师、70多名售后服务人员、100多名流程人员、50多名知识产权运营人员、50多名资深IT人员、120多名后勤保障人员以及20多名前知识产权主管部门审查员专门负责内部案件质检。
     </p >
+    <p>
+        在知识产权领域，维正知识产权集团现有服务领域涵盖了专利、商标、版权、相关政府项目申报等业务，各大知识产权业务从前期的权利确定、中间的知识产权商业化、到最后的知识产权维权，一站式解决了企业的知识产权问题。
+    </p>
+    <p>
+        此外，维正知识产权集团律师事务所的主要律师团队成员从事相关法律工作经验均超20年，除了能够解决企业的知识产权法律相关问题，还能够解决企业的金融相关法律问题、企业风控相关法律问题。
+    </p>
+    <p>
+        同时，维正知识产权集团的政府项目申报人员从事政府项目申报工作，需要专业的企业财务知识和资质，能够辅助企业按着政府要求，完善企业财务体系。
+    </p>
+    <p>总的来说，维正知识产权集团除了能够一站式解决企业的知识产权问题外，还能够一站式解决企业的法律问题和财务问题。</p>
     <dl class="list-text" >
-        <dt >我们的十大成绩：</dt >
+        <dt >维正知识产权集团的2016年10大成绩：</dt >
         <dd >1.发明专利授权率达到93%，远高于全国授权率48%；</dd >
         <dd >2.实用新型专利和外观专利授权率均为100%，远高于全国授权率62%；</dd >
         <dd >3.国内商标授权率达到91%，远高于全国授权率42%；</dd >
         <dd >4.国内版权和计算机软件著作权的授权率均为100%，远高于全国授权率74%；</dd >
         <dd >5.涉外商标授权率在96%，涉外专利授权量92%；</dd >
-        <dd >6.累计辅助3400多家企业完成了26000多件专利、商标的转让和许可，累积为企业带来了15亿左右的价值；</dd >
-        <dd >7.通过专利申请费用减免申请，累计为全国30000多家的客户节省了8亿左右的专利申报成本；</dd >
-        <dd >8.累计为全国30000多家免费申报专利授权补助申请，领取补助金额超17亿；</dd >
-        <dd >9.律师团队总共辅助1000多家企业进行了主动维权打假，代理原、被告知识产权纠纷案件4000多件，累计为企业挽回6亿多的损失；</dd >
-        <dd >10.在全国为23000多家企业申报政府政策项目，累计帮助企业拿到政府补助资金115亿，荣誉项目45000多项。</dd >
+        <dd >6.累计辅助5000多家企业完成了35000多件专利、商标的转让和许可，累积为企业带来了18亿左右的价值；</dd >
+        <dd >7.通过专利申请费用减免申请，累计为全国37000多家的客户节省了9亿左右的专利申报成本；</dd >
+        <dd >8.累计为全国38000多家免费申报专利授权补助申请，领取补助金额超20亿；</dd >
+        <dd >9.律师团队总共辅助1100多家企业进行了主动维权打假，代理原、被告知识产权纠纷案件4200多件，累计为企业挽回7亿多的损失；</dd >
+        <dd >10.在全国为24000多家企业申报政府政策项目，累计帮助企业拿到政府补助资金135亿，荣誉项目47000多项。</dd >
     </dl >
 </section >
 
