--- a/html/cases/index.html
+++ b/html/cases/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>成功案例</title>
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="keywords" content=""/>
-    <meta name="description" content=""/>
-    <meta name="apple-mobile-web-app-capable" content="no"/>
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="apple-mobile-web-app-capable" content="no" />
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css"/>
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css" />
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -19,97 +19,97 @@
 
 <body>
 
-<!--Header -->
-<header id="header">
-    <h1 id="logo">
-        <a href="../index.html">
-            <img src="../../img/logo.png" alt="">
-            <ins>维正集团</ins>
-        </a>
-    </h1>
-    
-    <nav id="navBar" class="navBar">
-        <ul class="nav clearfix">
-            <li>
-                <h3><a href="../index.html">网站首页</a></h3>
-            </li>
-            <li>
-                <h3><a href="../servicePro/index.html">服务项目</a></h3>
-                <ul class="sub">
-                    <li><a href="../servicePro/index.html"> 专利咨询</a></li>
-                    <li><a href="../servicePro/brandRegist.html"> 商标注册</a></li>
-                    <li><a href="../servicePro/copyright.html"> 版权登记</a></li>
-                    <li><a href="../servicePro/projectApplication.html"> 项目申报</a></li>
-                </ul>
-            </li>
-            <li class="double">
-                <h3 class="active"><a href="../cases/index.html">成功案例</a></h3>
-                <ul class="sub">
-                    <li><a href="../cases/index.html#floor1">传统制造</a></li>
-                    <li><a href="../cases/index.html#floor2">高端设备</a></li>
-                    <li><a href="../cases/index.html#floor3">建筑工程</a></li>
-                    <li><a href="../cases/index.html#floor4">交通运输</a></li>
-                    <li><a href="../cases/index.html#floor5">生物医药</a></li>
-                    <li><a href="../cases/index.html#floor6">光电通信</a></li>
-                    <li><a href="../cases/index.html#floor7">高等院校</a></li>
-                    <li><a href="../cases/index.html#floor8">服饰纺织</a></li>
-                    <li><a href="../cases/index.html#floor9">食品饮料</a></li>
-                    <li><a href="../cases/index.html#floor10">农林牧渔</a></li>
-                </ul>
-            </li>
-            <li>
-                <h3><a href="../foolishBird/index.html">傻鸟知服</a></h3>
-            </li>
-            <li>
-                <h3><a href="../newsCenter/index.html">资讯中心</a></h3>
-                <ul class="sub">
-                    <li><a href="../newsCenter/index.html">企业动态</a></li>
-                    <li><a href="../newsCenter/mediaNews.html">媒体关注</a></li>
-                    <li><a href="../newsCenter/industryNews.html">行业动态</a></li>
-                    <li><a href="../newsCenter/lawNews.html">法律法规</a></li>
-                </ul>
-            </li>
-            <li>
-                <h3><a href="../aboutUs/index.html">关于我们</a></h3>
-                <ul class="sub">
-                    <li><a href="../aboutUs/index.html">走进维正</a></li>
-                    <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
-                    <li><a href="../aboutUs/wzDevelopment.html">发展历程</a></li>
-                    <li><a href="../aboutUs/wzTeam.html">维正团队</a></li>
-                </ul>
-            </li>
-            <li>
-                <h3><a href="../joinUs/index.html">诚聘英才</a></h3>
-                <ul class="sub">
-                    <li><a href="../joinUs/index.html">招聘职位</a></li>
-                    <li><a href="../joinUs/idea.html">用人理念</a></li>
-                </ul>
-            </li>
-            <li>
-                <h3><a href="../contactUs/index.html">联系我们</a></h3>
-            </li>
-        </ul>
-    </nav>
-    
-    <!--响应菜单-->
-    <menu class="response-menu" >
-        <ul >
-            <li ><a href="../index.html" >维正首页</a ></li >
-            <li ><a href="../servicePro/index.html" > 专利服务</a ></li >
-            <li ><a href="../servicePro/brandRegist.html" > 商标服务</a ></li >
-            <li ><a href="../servicePro/copyright.html" > 版权服务</a ></li >
-            <li ><a href="../servicePro/projectApplication.html" > 项目服务</a ></li >
-            <li ><a href="../foolishBird/index.html" >傻鸟知服</a ></li >
-            <li ><a href="../newsCenter/index.html" >资讯中心</a ></li >
-            <li ><a href="../aboutUs/index.html" >关于我们</a ></li >
-            <li ><a href="../joinUs/index.html" >诚聘英才</a ></li >
-            <li ><a href="../contactUs/index.html" >联系我们</a ></li >
-        </ul >
-    </menu >
-    <div class="nav-toggle" >
-        <div class="icon" ></div >
-    </div >
-    <div class="blurBg" > </div >
+    <!--Header -->
+    <header id="header">
+        <h1 id="logo">
+            <a href="../index.html">
+                <img src="../../img/logo.png" alt="">
+                <ins>维正集团</ins>
+            </a>
+        </h1>
+
+        <nav id="navBar" class="navBar">
+            <ul class="nav clearfix">
+                <li>
+                    <h3><a href="../index.html">网站首页</a></h3>
+                </li>
+                <li>
+                    <h3><a href="../servicePro/index.html">服务项目</a></h3>
+                    <ul class="sub">
+                        <li><a href="../servicePro/index.html"> 专利咨询</a></li>
+                        <li><a href="../servicePro/brandRegist.html"> 商标注册</a></li>
+                        <li><a href="../servicePro/copyright.html"> 版权登记</a></li>
+                        <li><a href="../servicePro/projectApplication.html"> 项目申报</a></li>
+                    </ul>
+                </li>
+                <li class="double">
+                    <h3 class="active"><a href="../cases/index.html">成功案例</a></h3>
+                    <ul class="sub">
+                        <li><a href="../cases/index.html#floor1">传统制造</a></li>
+                        <li><a href="../cases/index.html#floor2">高端设备</a></li>
+                        <li><a href="../cases/index.html#floor3">建筑工程</a></li>
+                        <li><a href="../cases/index.html#floor4">交通运输</a></li>
+                        <li><a href="../cases/index.html#floor5">生物医药</a></li>
+                        <li><a href="../cases/index.html#floor6">光电通信</a></li>
+                        <li><a href="../cases/index.html#floor7">高等院校</a></li>
+                        <li><a href="../cases/index.html#floor8">服饰纺织</a></li>
+                        <li><a href="../cases/index.html#floor9">食品饮料</a></li>
+                        <li><a href="../cases/index.html#floor10">农林牧渔</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h3><a href="../foolishBird/index.html">傻鸟知服</a></h3>
+                </li>
+                <li>
+                    <h3><a href="../newsCenter/index.html">资讯中心</a></h3>
+                    <ul class="sub">
+                        <li><a href="../newsCenter/index.html">企业动态</a></li>
+                        <li><a href="../newsCenter/mediaNews.html">媒体关注</a></li>
+                        <li><a href="../newsCenter/industryNews.html">行业动态</a></li>
+                        <li><a href="../newsCenter/lawNews.html">法律法规</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h3><a href="../aboutUs/index.html">关于我们</a></h3>
+                    <ul class="sub">
+                        <li><a href="../aboutUs/index.html">走进维正</a></li>
+                        <li><a href="../aboutUs/wzCulture.html">维正文化</a></li>
+                        <li><a href="../aboutUs/wzDevelopment.html">发展历程</a></li>
+                        <li><a href="../aboutUs/wzTeam.html">维正团队</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h3><a href="../joinUs/index.html">诚聘英才</a></h3>
+                    <ul class="sub">
+                        <li><a href="../joinUs/index.html">招聘职位</a></li>
+                        <li><a href="../joinUs/idea.html">用人理念</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h3><a href="../contactUs/index.html">联系我们</a></h3>
+                </li>
+            </ul>
+        </nav>
+
+        <!--响应菜单-->
+        <menu class="response-menu">
+            <ul>
+                <li><a href="../index.html">维正首页</a ></li >
+                <li ><a href="../servicePro/index.html" > 专利服务</a ></li >
+                <li ><a href="../servicePro/brandRegist.html" > 商标服务</a ></li >
+                <li ><a href="../servicePro/copyright.html" > 版权服务</a ></li >
+                <li ><a href="../servicePro/projectApplication.html" > 项目服务</a ></li >
+                <li ><a href="../foolishBird/index.html" >傻鸟知服</a ></li >
+                <li ><a href="../newsCenter/index.html" >资讯中心</a ></li >
+                <li ><a href="../aboutUs/index.html" >关于我们</a ></li >
+                <li ><a href="../joinUs/index.html" >诚聘英才</a ></li >
+                <li ><a href="../contactUs/index.html" >联系我们</a ></li >
+            </ul >
+        </menu>
+        <div class="nav-toggle" >
+            <div class="icon" ></div >
+        </div >
+        <div class="blurBg" > </div >
 </header>
 
 <!--Banner-->
@@ -129,9 +129,9 @@
                 <header class="pro-text clearfix">
                     <h3>传统制造类</h3>
                     <span>
-                    <label>成功案例</label>
-                    <sub>这里象征着我们的态度和实力。</sub>
-                </span>
+                        <label>成功案例</label>
+                        <sub>这里象征着我们的态度和实力。</sub>
+                    </span>
                 </header>
                 <p> 制造业基础能力自主提升是我国从工业大国迈向工业强国的战略基石，工业的基础强化攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
                 </p>
@@ -432,7 +432,7 @@
         <section class="wrap text-center case-client clearfix">
             <figure class="title">
                 <figcaption>
-                    <h3>合作企业</h3>
+                    <h3>合作院校</h3>
                 </figcaption>
             </figure>
             <ul>
@@ -638,65 +638,69 @@
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span> </li>
-        <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em> <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
-        <li><em class="icon-backtop"></em></li>
-    </ul>
-</aside>
+        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+                </li>
+                <li><em class="icon-tel"></em><span>400-6063708</span></li>
+                <li><em class="icon-wechat"></em>
+                    <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p>
+                </li>
+                <li><em class="icon-backtop"></em></li>
+            </ul>
+            </aside>
 
-<!--Footer-->
-<footer id="main-footer">
-    <section class="btm-nav clearfix">
-        <dl>
-            <dt>服务项目</dt>
-            <dd><a href="../servicePro/index.html">专利咨询</a></dd>
-            <dd><a href="../servicePro/projectApplication.html">项目申请</a></dd>
-            <dd><a href="../servicePro/brandRegist.html">商标注册</a></dd>
-            <dd><a href="../servicePro/copyright.html">项目申报</a></dd>
-        </dl>
-        <dl>
-            <dt>成功案例</dt>
-            <dd><a href="../cases/index.html#floor1">传统制造</a></dd>
-            <dd><a href="../cases/index.html#floor7">高等教育</a></dd>
-            <dd><a href="../cases/index.html#floor3">建筑工程</a></dd>
-            <dd><a href="../cases/index.html">更多+</a></dd>
-        </dl>
-        <dl>
-            <dt>资讯中心</dt>
-            <dd><a href="../newsCenter/index.html">企业动态</a></dd>
-            <dd><a href="../newsCenter/mediaNews.html">媒体关注</a></dd>
-            <dd><a href="../newsCenter/industryNews.html">行业动态</a></dd>
-            <dd><a href="../newsCenter/lawNews.html">法律法规</a></dd>
-        </dl>
-        <dl>
-            <dt>关于我们</dt>
-            <dd><a href="../aboutUs/index.html">走进维正</a></dd>
-            <dd><a href="../aboutUs/wzCulture.html">维正文化</a></dd>
-            <dd><a href="../aboutUs/wzDevelopment.html">发展历程</a></dd>
-            <dd><a href="../aboutUs/wzTeam.html">维正团队</a></dd>
-        </dl>
-        <dl>
-            <dt>诚聘英才</dt>
-            <dd><a href="../joinUs/index.html">招聘职位</a></dd>
-            <dd><a href="../joinUs/idea.html">用人理念</a></dd>
-        </dl>
-    </section>
-    <section class="btm-contact">
-        <ul>
-            <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
-            </li>
-            <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
-            </li>
-        </ul>
-    </section>
-    <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
-</footer>
+            <!--Footer-->
+            <footer id="main-footer">
+                <section class="btm-nav clearfix">
+                    <dl>
+                        <dt>服务项目</dt>
+                        <dd><a href="../servicePro/index.html">专利咨询</a></dd>
+                        <dd><a href="../servicePro/projectApplication.html">项目申请</a></dd>
+                        <dd><a href="../servicePro/brandRegist.html">商标注册</a></dd>
+                        <dd><a href="../servicePro/copyright.html">项目申报</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>成功案例</dt>
+                        <dd><a href="../cases/index.html#floor1">传统制造</a></dd>
+                        <dd><a href="../cases/index.html#floor7">高等教育</a></dd>
+                        <dd><a href="../cases/index.html#floor3">建筑工程</a></dd>
+                        <dd><a href="../cases/index.html">更多+</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>资讯中心</dt>
+                        <dd><a href="../newsCenter/index.html">企业动态</a></dd>
+                        <dd><a href="../newsCenter/mediaNews.html">媒体关注</a></dd>
+                        <dd><a href="../newsCenter/industryNews.html">行业动态</a></dd>
+                        <dd><a href="../newsCenter/lawNews.html">法律法规</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>关于我们</dt>
+                        <dd><a href="../aboutUs/index.html">走进维正</a></dd>
+                        <dd><a href="../aboutUs/wzCulture.html">维正文化</a></dd>
+                        <dd><a href="../aboutUs/wzDevelopment.html">发展历程</a></dd>
+                        <dd><a href="../aboutUs/wzTeam.html">维正团队</a></dd>
+                    </dl>
+                    <dl>
+                        <dt>诚聘英才</dt>
+                        <dd><a href="../joinUs/index.html">招聘职位</a></dd>
+                        <dd><a href="../joinUs/idea.html">用人理念</a></dd>
+                    </dl>
+                </section>
+                <section class="btm-contact">
+                    <ul>
+                        <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
+                        <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
+                        </li>
+                        <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
+                        <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
+                        </li>
+                    </ul>
+                </section>
+                <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
+            </footer>
 
-<script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
-<script src="../../js/public.js"></script>
-<script src="../../js/pages/cases.js"></script>
+            <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+            <script src="../../js/public.js"></script>
+            <script src="../../js/pages/cases.js"></script>
 </body>
+
 </html>
