--- a/html/contactUs/index.html
+++ b/html/contactUs/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE HTML>
-<html lang="zh-CN" >
+<html lang="zh-CN">
 
-<head >
-    <meta charset="UTF-8" >
-    <title >联系我们</title >
+<head>
+    <meta charset="UTF-8">
+    <title>联系我们</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="apple-mobile-web-app-capable" content="no" />
-    <meta name="format-detection" content="telephone=no" >
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="../../css/style.css" />
     <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css" />
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js" ></script >
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js" ></script >
     <![endif]-->
-</head >
+</head>
 
-<body >
+<body>
 
-<!--Header -->
-<header id="header" >
-    <h1 id="logo" >
-        <a href="../index.html" >
-            <img src="../../img/logo.png" alt="" >
-            <ins >维正集团</ins >
+    <!--Header -->
+    <header id="header">
+        <h1 id="logo">
+            <a href="../index.html">
+                <img src="../../img/logo.png" alt="">
+                <ins>维正集团</ins >
         </a >
     </h1 >
     
@@ -134,6 +134,8 @@
             <li id="nanjing" class="city" >南京</li >
             <li id="suzhou" class="city" >苏州</li >
             <li id="wuxi" class="city" >无锡</li >
+            <li id="changzhou" class="city" >常州</li >
+            <li id="nantong" class="city" >南通</li >
             <li id="shanghai" >上海</li >
             <li id="wenzhou" class="city" >温州</li >
             <li id="taizhou" class="city" >台州</li >
@@ -141,6 +143,7 @@
             <li id="hangzhou" class="city" >杭州</li >
             <li id="shaoxing" class="city" >绍兴</li >
             <li id="jiaxing" class="city" >嘉兴</li >
+            <li id="xiamen" class="city" >厦门</li >
             <li id="guangzhou" class="city" >广州</li >
             <li id="shenzhen" class="city" >深圳</li >
             <li id="dongguan" class="city" >东莞</li >
@@ -149,6 +152,7 @@
             <span id="beijing" class=" active" >北京</span >
             <span id="jiangsu" >江苏省</span >
             <span id="zhejiang" >浙江省</span >
+            <span id="fujian" >福建省</span >
             <span id="guangdong" >广东省</span >
         </aside >
         <div class="map-info" >
@@ -261,6 +265,34 @@
                     <li >公司邮箱：wxweizheng@chinaweizheng.com</li >
                 </ul >
             </div >
+            <div class="box" data-city="常州" >
+                <header class="content-side" >
+                    <span class="prev" >上一个</span >
+                    <span class="next" >下一个</span >
+                    <img src="../../img/city/city-changzhou.jpg" />
+                </header >
+                <p >常州维正知识产权代理有限公司</p >
+                <ul >
+                    <li >地址：江苏省常州市钟楼区吾悦国际广场6号楼3601</li >
+                    <li >联系电话：0519-83336902</li >
+                    <li >公司传真：0519-83336952</li >
+                    <li >公司邮箱：czweizheng@chinaweizheng.com</li >
+                </ul >
+            </div >
+             <div class="box" data-city="南通" >
+                <header class="content-side" >
+                    <span class="prev" >上一个</span >
+                    <span class="next" >下一个</span >
+                    <img src="../../img/city/city-nantong.jpg" />
+                </header >
+                <p >南通维正知识产权代理有限公司</p >
+                <ul >
+                    <li >地址：江苏省南通市崇川区中南百货33楼3302</li >
+                    <li >联系电话：0513－89013919 </li >
+                    <li >公司传真：0513－89013929</li >
+                    <li >公司邮箱：ntweizheng@chinaweizheng.com</li >
+                </ul >
+            </div >
             <div class="box" data-city="上海" >
                 <header class="content-side" >
                     <span class="prev" >上一个</span >
@@ -356,6 +388,20 @@
                     <li >联系电话：0573—83389111</li >
                     <li >公司传真：0573—83593588</li >
                     <li >公司邮箱：jxweizheng@chinaweizheng.com</li >
+                </ul >
+            </div >
+             <div class="box" data-city="厦门" >
+                <header class="content-side" >
+                    <span class="prev" >上一个</span >
+                    <span class="next" >下一个</span >
+                    <img src="../../img/city/city-xiamen.jpg" />
+                </header >
+                <p >厦门维正知识产权代理有限公司</p >
+                <ul >
+                    <li >地址：福建省厦门市集美区杏林湾营运中心3号楼2702室</li >
+                    <li >联系电话：0592-6682812</li >
+                    <li >公司传真：0592-6682813</li >
+                    <li >公司邮箱：xmweizheng@chinaweizheng.com</li >
                 </ul >
             </div >
             <div class="box" data-city="广州" >
